--- a/sub3suite/src/project/Project.ui
+++ b/sub3suite/src/project/Project.ui
@@ -54,6 +54,12 @@
          <height>16777215</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
        <property name="tabSpacing">
         <number>4</number>
        </property>
@@ -87,6 +93,8 @@
            <property name="font">
             <font>
              <pointsize>8</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="editTriggers">
@@ -356,6 +364,12 @@
         <height>16777215</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="tabSpacing">
        <number>4</number>
       </property>
@@ -602,7 +616,9 @@
           </property>
           <property name="font">
            <font>
+            <weight>75</weight>
             <italic>false</italic>
+            <bold>true</bold>
            </font>
           </property>
          </widget>
