--- a/sub3suite/src/Dialogs/FailedScansDialog.ui
+++ b/sub3suite/src/Dialogs/FailedScansDialog.ui
@@ -26,6 +26,12 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTableView" name="tableView">
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>8</pointsize>
+      </font>
+     </property>
      <property name="focusPolicy">
       <enum>Qt::NoFocus</enum>
      </property>
