--- a/sub3suite/res/themes/default.css
+++ b/sub3suite/res/themes/default.css
@@ -77,7 +77,7 @@ QGroupBox {
     border-style: solid;
     border-width:1px;
     border-color: rgb(30,30,30);
-    padding-top: 5px;
+    padding-top: 7px;
 }
 
 QGroupBox:title {
@@ -85,6 +85,7 @@ QGroupBox:title {
     left: 10px;
     margin-left: 3px;
     margin-right: 3px;
+    padding-bottom: 1px;
 }
 
 /****************************** CheckBox ******************************/
@@ -155,7 +156,7 @@ QRadioButton::indicator:checked:pressed {
 
 /***************************** Headerview *****************************/
 QHeaderView::section {
-    height: 20px;
+    min-height: 20px;
     padding: 1px;
     background-color: rgb(40,40,40);
     border-style: solid;
@@ -169,13 +170,15 @@ QHeaderView::section {
 /****************************** ComboBox ******************************/
 QComboBox {
     min-height: 19px;
-    max-height: 19px;
+    min-width: 90px;
+    padding-left: 5px;
+    padding-right: 1px;
+    padding-top: 1px;
+    padding-bottom: 1px;
     border-style: outset;
     border-style: solid;
     border-color: rgb(25,25,25);
     border-width: 1px;
-    padding-left: 5px;
-    padding-bottom: 1px;
     color: rgb(255,255,255);
     background-color: transparent;
 }
