--- a/sub3suite/src/Dialogs/AboutDialog.ui
+++ b/sub3suite/src/Dialogs/AboutDialog.ui
@@ -188,6 +188,7 @@
         <widget class="QTableView" name="tableViewContributors">
          <property name="font">
           <font>
+           <family>MS Shell Dlg 2</family>
            <pointsize>8</pointsize>
           </font>
          </property>
@@ -249,6 +250,7 @@
         <widget class="QTableView" name="tableViewModules">
          <property name="font">
           <font>
+           <family>MS Shell Dlg 2</family>
            <pointsize>8</pointsize>
           </font>
          </property>
@@ -310,6 +312,7 @@
         <widget class="QTableView" name="tableViewDonations">
          <property name="font">
           <font>
+           <family>MS Shell Dlg 2</family>
            <pointsize>8</pointsize>
           </font>
          </property>
@@ -368,7 +371,7 @@
         <widget class="QPlainTextEdit" name="plainTextEditHistory">
          <property name="font">
           <font>
-           <pointsize>9</pointsize>
+           <pointsize>8</pointsize>
           </font>
          </property>
         </widget>
@@ -384,7 +387,7 @@
         <widget class="QPlainTextEdit" name="plainTextEditLicense">
          <property name="font">
           <font>
-           <pointsize>9</pointsize>
+           <pointsize>8</pointsize>
           </font>
          </property>
          <property name="textInteractionFlags">
