--- a/sub3suite/src/Dialogs/StartupDialog.ui
+++ b/sub3suite/src/Dialogs/StartupDialog.ui
@@ -285,6 +285,15 @@
        </property>
        <item>
         <widget class="QTableView" name="tableViewProjects">
+         <property name="font">
+          <font>
+           <family>MS Shell Dlg 2</family>
+           <pointsize>8</pointsize>
+          </font>
+         </property>
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
          <property name="alternatingRowColors">
           <bool>true</bool>
          </property>
