--- a/sub3suite/src/enums/cidr/CidrEnum.ui
+++ b/sub3suite/src/enums/cidr/CidrEnum.ui
@@ -39,7 +39,7 @@
       <widget class="QComboBox" name="comboBoxOption">
        <property name="minimumSize">
         <size>
-         <width>100</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -61,7 +61,7 @@
       <widget class="QComboBox" name="comboBoxEngine">
        <property name="minimumSize">
         <size>
-         <width>100</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -233,6 +233,12 @@
         </item>
         <item>
          <widget class="QTreeView" name="treeViewResults">
+          <property name="font">
+           <font>
+            <family>MS Shell Dlg 2</family>
+            <pointsize>8</pointsize>
+           </font>
+          </property>
           <property name="contextMenuPolicy">
            <enum>Qt::CustomContextMenu</enum>
           </property>
@@ -265,7 +271,7 @@
            <widget class="QComboBox" name="comboBoxFilter">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>0</width>
               <height>0</height>
              </size>
             </property>
