--- a/sub3suite/src/enums/email/EmailEnum.ui
+++ b/sub3suite/src/enums/email/EmailEnum.ui
@@ -39,7 +39,7 @@
       <widget class="QComboBox" name="comboBoxEngine">
        <property name="minimumSize">
         <size>
-         <width>110</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -223,6 +223,12 @@
         </item>
         <item>
          <widget class="QTreeView" name="treeViewResults">
+          <property name="font">
+           <font>
+            <family>MS Shell Dlg 2</family>
+            <pointsize>8</pointsize>
+           </font>
+          </property>
           <property name="acceptDrops">
            <bool>false</bool>
           </property>
@@ -252,7 +258,7 @@
            <widget class="QComboBox" name="comboBoxFilter">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>0</width>
               <height>0</height>
              </size>
             </property>
