--- a/sub3suite/src/enums/ssl/SSLEnum.ui
+++ b/sub3suite/src/enums/ssl/SSLEnum.ui
@@ -39,7 +39,7 @@
       <widget class="QComboBox" name="comboBoxModule">
        <property name="minimumSize">
         <size>
-         <width>100</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -228,6 +228,12 @@
         </item>
         <item>
          <widget class="QTreeView" name="treeViewResults">
+          <property name="font">
+           <font>
+            <family>MS Shell Dlg 2</family>
+            <pointsize>8</pointsize>
+           </font>
+          </property>
           <property name="contextMenuPolicy">
            <enum>Qt::CustomContextMenu</enum>
           </property>
@@ -260,7 +266,7 @@
            <widget class="QComboBox" name="comboBoxFilter">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>0</width>
               <height>0</height>
              </size>
             </property>
